# runTimeChallange

./: README.md
RtChallenge/: CMakeLists.txt  main.cpp
RtChallenge/Readme/: manual.html
RtChallenge/Readme/hints/: hints.html
RtChallenge/data_0/: carData_small.xml  map.xml  solution.txt  targetData.xml
RtChallenge/data_1/: map.xml  solution.txt  targetData.xml
RtChallenge/data_2/: map.xml  solution.txt  targetData.xml
RtChallenge/data_3/: map.xml  solution.txt  targetData.xml
RtChallenge/data_4/: map.xml  solution.txt  targetData.xml
RtChallenge/model/: Cross.cpp  Cross.h  Edge.cpp  Edge.h  Map.cpp  Map.h  Target.cpp  Target.h  TargetData.cpp  TargetData.h
RtChallenge/utils/: tinyxml2.cpp  tinyxml2.h
